--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
+
 first_name: Camila
-middle_name: R.
+middle_name: R.d
 last_name: Name
 email: you@example.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
