--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ first_name: Camila
 middle_name: 
 last_name: Maura
 email: camila.maura.21@gmail.com
-description: > # the ">" symbol means to ignore newlines until "footer_text:"
+description:   # the ">" symbol means to ignore newlines until "footer_text:"
 Undergraduate student interested in pursuing a career in Computational Neuroscience
 footer_text: >
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
