--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ last_name: Maura
 email: camila.maura.21@gmail.com
 description:   # the ">" symbol means to ignore newlines until "footer_text:"
 Undergraduate student interested in pursuing a career in Computational Neuroscience
-footer_text: >
+footer_text: ''
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: favicon.ico # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
